@@ -1,6 +1,7 @@
 from django.db import models
 
 from django.utils.translation import ugettext_lazy as _
+from django.utils.http import urlquote
 from django.utils import timezone
 
 from django.contrib.auth.models import AbstractBaseUser, BaseUserManager, \
